--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,5 +19,4 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE, roclets = c("collate", "namespace", "rd",
     "roxytest::testthat_roclet"))
 RoxygenNote: 7.1.2
-Depends: 
-    tidyverse
+Depends: R (>= 4.0.0)
