overall raw check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,13 +8,16 @@ export(getKaKs)
 export(inferClonalTrees)
 export(plotCNAProfile)
 export(plotCNAtree)
+export(plotMutTree)
 export(plotVafCluster)
 export(readCNAProfile)
+export(set.colors)
 export(splitSegment)
 export(tree2timescape)
 export(viewTrees)
 import(CNAqc)
 import(MEDICCquant)
+import(ape)
 import(ggrepel)
 import(ggtree)
 import(phangorn)
