--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,12 @@ export(splitSegment)
 export(tree2timescape)
 export(viewTrees)
 import(CNAqc)
+import(ComplexHeatmap)
+import(GenomicRanges)
+import(IRanges)
 import(MEDICCquant)
 import(ape)
+import(clonevol)
 import(ggrepel)
 import(ggtree)
 import(phangorn)
