--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,12 @@ Authors@R: c(
 Description: What the package does (one paragraph).
 License: GPL (>= 3)
 Imports: 
+    clonevol,
     data.table,
     magrittr
 Suggests: 
+    rmarkdown,
+    knitr,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
@@ -20,3 +23,4 @@ Roxygen: list(markdown = TRUE, roclets = c("collate", "namespace", "rd",
     "roxytest::testthat_roclet"))
 RoxygenNote: 7.1.2
 Depends: R (>= 4.0.0)
+VignetteBuilder: knitr
