--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,8 +18,15 @@ Imports:
     clonevol,
     CNAqc,
     data.table,
+    dplyr,
     magrittr,
-    MesKit
+    MesKit,
+    pio,
+    ggplot2,
+    latex2exp,
+    stringr,
+    easypar,
+    dndscv
 Suggests: 
     knitr,
     rmarkdown,
@@ -28,7 +35,8 @@ VignetteBuilder:
     knitr
 Remotes: 
     github::caravagnalab/CNAqc,
-    github::hdng/clonevol
+    github::hdng/clonevol,
+    github::im3sanger/dndscv
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE, roclets = c("collate", "namespace", "rd",
