drop testthat currently, clean rds

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(set.colors)
 export(splitSegment)
 export(tree2timescape)
 export(viewTrees)
+exportClasses(Seg)
 import(CNAqc)
 import(ComplexHeatmap)
 import(GenomicRanges)
