--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,27 +18,25 @@ Imports:
     clonevol,
     CNAqc,
     data.table,
+    dndscv,
     dplyr,
+    easypar,
+    ggplot2,
+    latex2exp,
     magrittr,
     MesKit,
     pio,
-    ggplot2,
-    latex2exp,
-    stringr,
-    easypar,
-    dndscv
+    stringr
 Suggests: 
     knitr,
-    rmarkdown,
-    testthat (>= 3.0.0)
+    rmarkdown
 VignetteBuilder: 
     knitr
 Remotes: 
     github::caravagnalab/CNAqc,
     github::hdng/clonevol,
     github::im3sanger/dndscv
-Config/testthat/edition: 3
+biocViews:
 Encoding: UTF-8
-Roxygen: list(markdown = TRUE, roclets = c("collate", "namespace", "rd",
-    "roxytest::testthat_roclet"))
+Roxygen: list(markdown = TRUE, roclets = c("collate", "namespace", "rd"))
 RoxygenNote: 7.1.2
