--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,8 +19,6 @@ exportClasses(Seg)
 import(CNAqc)
 import(ComplexHeatmap)
 import(GenomicRanges)
-import(IRanges)
-import(MEDICCquant)
 import(ape)
 import(clonevol)
 import(ggrepel)
@@ -36,4 +34,14 @@ importFrom(data.table,.N)
 importFrom(data.table,.NGRP)
 importFrom(data.table,.SD)
 importFrom(data.table,data.table)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
 importFrom(magrittr,"%>%")
+importFrom(methods,new)
+importFrom(stats,as.dist)
+importFrom(stats,rnorm)
+importFrom(stats,setNames)
+importFrom(utils,data)
+importFrom(utils,read.delim)
+importFrom(utils,read.table)
+importFrom(utils,write.table)
