--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(calRoutines)
 export(getClinSites)
 export(getKaKs)
 export(inferClonalTrees)
+export(plotCNA)
 export(plotCNAProfile)
 export(plotCNAtree)
 export(plotMutTree)
