add function maf2variants

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,12 +7,14 @@ export(calRoutines)
 export(getClinSites)
 export(getKaKs)
 export(inferClonalTrees)
+export(maf2variants)
 export(plotCNA)
 export(plotCNAProfile)
 export(plotCNAtree)
 export(plotMutTree)
 export(plotVafCluster)
 export(readCNAProfile)
+export(readMaf)
 export(set.colors)
 export(splitSegment)
 export(tree2timescape)
@@ -25,6 +27,7 @@ import(ape)
 import(clonevol)
 import(ggrepel)
 import(ggtree)
+import(methods)
 import(phangorn)
 import(treeio)
 importFrom(data.table,":=")
@@ -36,11 +39,14 @@ importFrom(data.table,.N)
 importFrom(data.table,.NGRP)
 importFrom(data.table,.SD)
 importFrom(data.table,data.table)
+importFrom(data.table,fread)
+importFrom(data.table,setkey)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(magrittr,"%>%")
 importFrom(methods,new)
 importFrom(stats,as.dist)
+importFrom(stats,qnorm)
 importFrom(stats,rnorm)
 importFrom(stats,setNames)
 importFrom(utils,data)
